--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub page as PWA template</title>
   <link rel="canonical" href="https://ld3z.github.io/msm-breed-app/" />
-  <link rel="manifest" href="/github-page-pwa/manifest.webmanifest">
+  <link rel="manifest" href="/msm-breed-app/manifest.webmanifest">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
   <script>
       if (navigator.serviceWorker) {
         navigator.serviceWorker.register (
-          '/github-page-pwa/sw.js',
-          {scope: '/github-page-pwa/'}
+          '/msm-breed-app/sw.js',
+          {scope: '/msm-breed-app/'}
         )
       }
   </script>
